--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,8 +1,26 @@
-Build : project_main.c calculator.c
-	gcc project_main.c -o Calculator.out
+#TargetName : Dependencies
+#<TAB>commands
+#To check if the OS is Windows or Linux and set the executable file extension and delete command accordingly
+PROJ_NAME=Calculator
+SRC=src/project_main.c src/calculator.c 
+
+ifdef OS
+   RM = del /q
+   FixPath = $(subst /,\,$1)
+   EXEC = exe
+else
+   ifeq ($(shell uname), Linux)
+      RM = rm -rf
+      FixPath = $1
+	  EXEC = out
+   endif
+endif
+
+Build : $(SRC)
+	gcc  $(SRC)  -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm 
 
 Run : Build
-	./Calculator.out
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
 
 Clean:
-	rm -rf *.o *.out *.i *.s
+	$(RM) $(call FixPath,*.out)
